<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BabyFeeding</string>
    <!-- reminders -->
    <string name="reminder_confirm">Yes</string>
    <string name="reminder_remind_later">Remind me later</string>

    <string name="today">Today</string>

    <!-- feeding_cancel -->
    <string name="feeding_cancel_confirm_cancel">Yes, I\'m sure</string>
    <string name="feeding_cancel_not_cancel">No No!!</string>
    <string name="feeding_cancel_confirm_cancel_feeding_message">Do you really want to cancel this feeding?</string>

    <!-- alarm_clock_open -->
    <string name="alarm_clock_open_confirm">Yes I DO!!!</string>
    <string name="alarm_clock_open_cancel">No thanks</string>
    <string name="alarm_clock_open_title">Do you want to set Alarm Clock?</string>


    <string name="feed_list_header_start_time">Start</string>
    <string name="feed_list_header_finish_time">Finish</string>
    <string name="feed_list_header_feed_lasted">Lasted</string>
    <string name="feed_list_header_source">From</string>
    <string name="feed_list_header_date">Date</string>
    <string name="tab_feed_events_tabname">Feedings</string>
    <string name="tab_reminders_tabname">Reminders</string>
    <string name="add_reminder_button">Add Reminder</string>
    <string name="save_reminder_button">Save Reminder</string>
    <string name="reminder_message_hint">Reminder message</string>
    <string name="reminder_time_hint">Reminder time</string>
    <string name="cancel">Cancel</string>
    <string name="reminder_list_header_message">Reminder message</string>
    <string name="reminder_list_header_time">Time</string>
    <string name="add_feed_event_button">Add Feeding</string>
    <string name="start_event_time_hint">Start Time</string>
    <string name="end_event_time_hint">End Time</string>
    <string name="milk_amount_hint">Amount of milk</string>
    <string name="update_feed_event_button_text">Update feeding</string>
    <string name="feed_list_header_start_end_time">Start/End</string>
    <string name="feed_list_header_amount">Amount</string>
    <string name="tab_stats_tabname">Statistics</string>
    <string name="feed_day_list_header_day">Day</string>
    <string name="feed_day_list_header_amount_natural">Mama milk</string>
    <string name="feed_day_list_header_amount_chemical">Chemical</string>
    <string name="feed_day_list_header_amount_total">Total</string>
    <string name="feed_started_at">Started at</string>
    <string name="currently_running_feeding">You are currently feeding your baby. You can finalize that event or continue it by pressing \"Continue\" button</string>
    <string name="update_event_details">Update Feeding</string>
    <string name="feed_funning_action_bar_title">Feed Running</string>
    <string name="edit_reminder_action_bar_title">Edit Reminder</string>
    <string name="add_reminder_action_bar_title">Add Reminder</string>
    <string name="action_done_title">Done</string>

</resources>
