<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:id="@+id/header_container"
              android:background="@color/list_header_bg"
              android:layout_marginRight="@dimen/list_view_margin"
              android:layout_marginLeft="@dimen/list_view_margin"
        >
    <TextView
            style="@style/FeedListHeader"
            android:text="@string/feed_list_header_start_time"
            />
    <TextView
            style="@style/FeedListHeader"
            android:text="@string/feed_list_header_feed_lasted"
            />
    <TextView
            style="@style/FeedListHeader"
            android:text="@string/feed_list_header_source"
            />
    <TextView
            style="@style/FeedListHeader"
            android:textSize="14dip"
            android:text="@string/feed_list_header_amount"
            />
</LinearLayout>