<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              style="@style/DetailLayoutPadding">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_mother_child1">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding_half">

            <TextView
                    android:text="@string/milk_amount_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/NormalText"/>
            <EditText
                    android:id="@+id/milk_amount"
                    android:layout_width="match_parent"
                    style="@style/ChoiceEditText"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/start_event_time_hint"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content"
                            style="@style/RowText"/>

                    <TimePicker
                            android:id="@+id/start_event_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp">
                    <TextView
                            android:text="@string/end_event_time_hint"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content"
                            style="@style/RowText"/>
                    <TimePicker
                            android:id="@+id/end_event_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                </LinearLayout>

            </LinearLayout>
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_feed_event_button"
                    android:id="@+id/submit_feed_event_button"/>
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/cancel_feed_event_details_button"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>