<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@android:color/transparent"
               style="@style/DetailLayoutPadding">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_light">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/default_padding_half">

            <TextView
                    android:text="@string/reminder_message_hint"
                    style="@style/FormLabel" android:layout_marginTop="30dp"/>
            <EditText
                    android:id="@+id/reminder_message"
                    android:layout_width="match_parent"
                    style="@style/FormEditText" android:layout_marginTop="10dp" android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

            <TextView
                    android:text="@string/reminder_time_hint"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content"
                    style="@style/FormLabel"/>

            <TimePicker
                    android:id="@+id/reminder_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginTop="10dp"/>

            <LinearLayout
                    android:id="@+id/buttonArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="bottom|right"
                    android:orientation="horizontal"
                    android:padding="5dp" android:layout_marginTop="30dp">

                <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/WideButtonShort"
                        android:text="@string/save_reminder_button"
                        android:id="@+id/submit_reminder_button"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/WideButtonShort"
                        android:text="@string/cancel"
                        android:id="@+id/cancel_reminder_details_button"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>